--- a/frontend/src/components/templates/AboutTemplate.astro
+++ b/frontend/src/components/templates/AboutTemplate.astro
@@ -106,7 +106,7 @@ const description = aboutPage?.seo?.description || ''
 
   <style>
     .about {
-      padding: 50px var(--size-20) var(--size-20);
+      padding: var(--size-50) var(--size-20) var(--size-20);
       gap: var(--size-40);
       background: var(--color-white);
       min-height: 100vh;
