--- a/frontend/src/components/templates/HomeTemplate.astro
+++ b/frontend/src/components/templates/HomeTemplate.astro
@@ -246,6 +246,7 @@ function formatSubtitle(location: string, anneeDebut?: number, anneeFin?: number
       display: flex;
       flex-direction: column;
       background-color: var(--color-white);
+      padding-top: var(--size-50);
     }
 
     .home-footer-backdrop {
