--- a/frontend/src/components/helpers/ParcCredits.astro
+++ b/frontend/src/components/helpers/ParcCredits.astro
@@ -8,8 +8,12 @@
 ---
 
 <script>
-  console.log(
-    `%c
+  import { $credited } from '@/stores/credits'
+
+  if (!$credited.get()) {
+    $credited.set(true)
+    console.log(
+      `%c
                                                 
      ::::::::     :::::::     :::::  :::::::    
     ::.    :::  :::     ::.  ::    :::     ::   
@@ -22,6 +26,7 @@
                                                 
 👋 https://parc.studio/
 `,
-    'font-family: monospace; font-size: 10px; color: #999;'
-  )
+      'font-family: monospace; font-size: 10px; color: #999;'
+    )
+  }
 </script>
